--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -767,7 +767,7 @@
 		top: 0;
 		left: 0;
 		width: 100%;
-		background-color: #1CAD9C;
+		background-color: #FFF;
 		border-bottom: 1px solid #EEE;
 		-webkit-backface-visibility: hidden;
 	}
